--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,10 @@ pento-*.tar
 # Ignore assets that are produced by build tools.
 /priv/static/assets/
 
+#Ignore uploaded files
+#/priv/static/images
+#priv/static/images/live_view_upload-1634438708-281464815332492-7
+
 # Ignore digested assets cache.
 /priv/static/cache_manifest.json
 
