--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,7 @@ pento-*.tar
 /priv/static/assets/
 
 #Ignore uploaded files
-#/priv/static/images
-#priv/static/images/live_view_upload-1634438708-281464815332492-7
+/priv/static/images
 
 # Ignore digested assets cache.
 /priv/static/cache_manifest.json
